crates/shell-syntax/tests/snapshots/complete_tests__complete_hidden_file.snap
---
source: crates/shell-syntax/tests/complete_tests.rs
expression: completions
---
[
    Completion {
        text: ".hidden",
        display: ".hidden",
        kind: File,
        replace_start: 4,
        replace_end: 7,
    },
]
