crates/shell-syntax/tests/snapshots/complete_tests__complete_nested_path.snap
---
source: crates/shell-syntax/tests/complete_tests.rs
expression: completions
---
[
    Completion {
        text: "folder/nested.txt",
        display: "nested.txt",
        kind: File,
        replace_start: 4,
        replace_end: 13,
        is_partial: false,
    },
]
