crates/shell-syntax/tests/snapshots/complete_tests__complete_subcommand.snap
---
source: crates/shell-syntax/tests/complete_tests.rs
expression: completions
---
[
    Completion {
        text: "commit",
        display: "commit",
        kind: Subcommand,
        replace_start: 4,
        replace_end: 8,
        is_partial: false,
    },
]
