crates/shell-syntax/tests/snapshots/complete_tests__complete_subcommand_cargo.snap
---
source: crates/shell-syntax/tests/complete_tests.rs
expression: completions
---
[
    Completion {
        text: "test",
        display: "test",
        kind: Subcommand,
        replace_start: 6,
        replace_end: 8,
        is_partial: false,
    },
]
